--- a/templates/admin/admin_subject_manage.html
+++ b/templates/admin/admin_subject_manage.html
@@ -29,11 +29,13 @@ block content %} {% include "admin/admin_wrapper.html" %}
           >
             {{ message }}
             <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="alert"
-              aria-label="Close"
-            ></button>
+            type="button"
+            class="close"
+            data-dismiss="alert"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
           </div>
           {% endfor %}
         </div>
@@ -45,9 +47,11 @@ block content %} {% include "admin/admin_wrapper.html" %}
       class="container p-3"
       action="{% if sub %}/admin/subject/update?sub_id={{ sub.id }}{% else %}/admin/subject/new{% endif %}"
     >
-      <div class="modal-body">
+      <div>
         <div class="form-group">
-          <label for="exampleInputName1">Subject Name</label>
+          <label for="exampleInputName1"
+            >Subject Name <span class="required">*</span></label
+          >
           <input
             type="text"
             class="form-control"
@@ -59,7 +63,9 @@ block content %} {% include "admin/admin_wrapper.html" %}
           />
         </div>
         <div class="form-group">
-          <label for="exampleInputDescription1">Subject Description</label>
+          <label for="exampleInputDescription1"
+            >Subject Description <span class="required">*</span></label
+          >
           <input
             type="text"
             class="form-control"
@@ -72,7 +78,9 @@ block content %} {% include "admin/admin_wrapper.html" %}
           />
         </div>
         <div class="form-group">
-          <label for="exampleInputCode1">Subject Code</label>
+          <label for="exampleInputCode1"
+            >Subject Code <span class="required">*</span></label
+          >
           <input
             type="text"
             class="form-control"
@@ -83,7 +91,7 @@ block content %} {% include "admin/admin_wrapper.html" %}
           />
         </div>
       </div>
-      <div class="modal-footer">
+      <div>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">
           <a href="/admin/subject?skip=0&take=25" class="text-white">Close </a>
         </button>
