--- a/templates/admin/admin_single_chapter.html
+++ b/templates/admin/admin_single_chapter.html
@@ -217,7 +217,7 @@ content %}{% include "admin/admin_wrapper.html" %}
               >
             </td>
             <td>{{ quiz.date_of_quiz }}</td>
-            <td>{{ quiz.time_duration }}</td>
+            <td>{{ quiz.time_duration|int/3600000 }} hour</td>
             <td>{{ quiz.number_of_questions }}</td>
             <td>{{ quiz.remarks }}</td>
             <td>{{ quiz.total_marks }}</td>
@@ -233,6 +233,7 @@ content %}{% include "admin/admin_wrapper.html" %}
               </button>
               <form
                 method="post"
+                action="/admin/subject/chapter/quiz/delete?sub_id={{ sub.id }}&chap_id={{ chap.id }}&quiz_id={{ quiz.id }}"
                 onsubmit="return confirm('Are you sure you wish to delete the quiz with {{sub.code}}?, !! This will delete all questions associated with it !!');"
               >
                 <input type="submit" class="btn btn-danger" value="Delete" />
