--- a/templates/admin/admin_single_quiz.html
+++ b/templates/admin/admin_single_quiz.html
@@ -185,11 +185,7 @@ content %}{% include "admin/admin_wrapper.html" %}
     <div class="form-inline my-2 my-lg-0">
       <div class="d-flex">
         <button type="button" class="btn btn-primary mr-3">
-          <a
-            class="text-white"
-            href="/admin/subject/chapter/quiz/new?sub_id={{ sub.id }}&chap_id={{ chap.id }}"
-            >New Question</a
-          >
+          <a class="text-white">New Question</a>
         </button>
         <button
           type="button"
@@ -217,5 +213,87 @@ content %}{% include "admin/admin_wrapper.html" %}
       </div>
     </div>
   </div>
+
+  <section class="mt-3">
+    <div class="table-responsive">
+      <table class="table table-bordered table-hover">
+        <thead>
+          <tr>
+            <th scope="col">S.No.</th>
+            <th scope="col">Question Title</th>
+            <th scope="col">Question Statement</th>
+            <th scope="col">Option 1</th>
+            <th scope="col">Option 2</th>
+            <th scope="col">Option 3</th>
+            <th scope="col">Option 4</th>
+            <th scope="col">Correct Option</th>
+            <th scope="col">Marks</th>
+            <th scope="col">Created At</th>
+            <th scope="col">Updated At</th>
+            <th scope="col">Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for question in rows %}
+          <tr class="pointer">
+            <th scope="row">{{ loop.index+skip }}</th>
+            <td class="link">
+              <a>{{ question.question_title }}</a>
+            </td>
+            <td>{{ question.question_statement }}</td>
+            <td>{{ question.option_1 }}</td>
+            <td>{{ question.option_2 }}</td>
+            <td>{{ question.option_3 }}</td>
+            <td>{{ question.option_4 }}</td>
+            <td>{{ question.correct_option }}</td>
+            <td>{{ question.marks }}</td>
+            <td>{{ question.created_at }}</td>
+            <td>{{ question.updated_at }}</td>
+            <td>
+              <button type="button" class="btn btn-secondary mr-3 mb-3">
+                Update
+              </button>
+              <form
+                method="post"
+                onsubmit="return confirm('Are you sure you wish to delete the quiz with {{sub.code}}?, !! This will delete all questions associated with it !!');"
+              >
+                <input type="submit" class="btn btn-danger" value="Delete" />
+              </form>
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item">
+            <a
+              class="page-link"
+              href="/admin/subject/chapter/quiz/view?quiz_id={{ quiz.id }}&chap_id={{ chap.id }}&sub_id={{ sub.id }}&skip={{ (skip - take) if skip > 0 else 0 }}&take={{ take }}"
+              aria-label="Previous"
+            >
+              <span aria-hidden="true">&laquo;</span>
+              <span
+                >{% if skip > 0 %}Previous{% else %}Start Page{% endif %}</span
+              >
+            </a>
+          </li>
+          <li class="page-item">
+            <a
+              class="page-link"
+              href="/admin/subject/chapter/quiz/view?quiz_id={{ quiz.id }}&chap_id={{ chap.id }}&sub_id={{ sub.id }}&skip={{ ( ((skip//take)+1)*take if ((skip|int+take) < total_rows) else None  ) if ((skip|int+take) < total_rows) else 0 }}&take={{ take }}"
+              aria-label="Next"
+            >
+              <span
+                >{% if ((skip|int + take) < total_rows) %}Next{% else %}Go back
+                to Start Page{% endif %}</span
+              >
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </section>
 </section>
 {% endblock %}
