--- a/templates/admin/admin_single_quiz.html
+++ b/templates/admin/admin_single_quiz.html
@@ -184,7 +184,7 @@ content %}{% include "admin/admin_wrapper.html" %}
     </div>
     <div class="form-inline my-2 my-lg-0">
       <div class="d-flex">
-        {% if quiz.number_of_questions < total_rows %}<button
+        {% if quiz.number_of_questions > total_rows %}<button
           type="button"
           class="btn btn-primary mr-3"
         >
